# bubble-analysis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOGFOODING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.semgrep/: import-violations.yaml  layer-boundaries.yaml  magic-strings.yaml
bubble/: __init__.py  cache.py  cli.py  config.py  detectors.py  enums.py  extractor.py  formatters.py  loader.py  lsp.py  models.py  propagation.py  protocols.py  queries.py  results.py
bubble/integrations/: README.md  __init__.py  base.py  formatters.py  models.py  queries.py
bubble/integrations/cli_scripts/: __init__.py  cli.py  detector.py
bubble/integrations/django/: __init__.py  cli.py  detector.py  semantics.py
bubble/integrations/fastapi/: __init__.py  cli.py  detector.py  semantics.py
bubble/integrations/flask/: __init__.py  cli.py  detector.py
bubble/integrations/generic/: __init__.py  config.py  detector.py  frameworks.py
bubble/stubs/: boto3.yaml  httpx.yaml  requests.yaml  sqlalchemy.yaml
docs/: CALL_RESOLUTION_DEEP_DIVE.md  CROSSLINK_SPEC.md  EXTENDING.md  FUNCTION_KEY_REFACTOR.md  IMPROVEMENT-CYCLE.md  LSP_INTEGRATION.md  PERFORMANCE.md  ZED_EXTENSION_SPEC.md  blog-bug-report-draft.md  blog-collapsible-format.md  blog-post-draft.md  bug-hunting-results.md  top-bugs-ranked.md
docs/audit-results/: airflow.txt  httpbin.txt  label-studio.txt  redash.txt
docs/issues/: airflow-audit-results.txt  airflow-detailed-bugs.md  airflow-integration-design.md  confirmed-bugs-found.md  flask-appbuilder-expose.md  flask-restful-support.md  propagation-performance.md  sentry-audit-results.txt  sentry-detailed-bugs.md  sentry-real-bugs.md  strict-mode-routes-to.md  superset-audit-results.txt  superset-detailed-bugs.md
editors/vscode/: .vscodeignore  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/zed/: README.md  extension.wasm
examples/detectors/: apscheduler.py  celery.py  datasette.py  rq.py
flow/: __init__.py  cache.py  cli.py  config.py  detectors.py  enums.py  extractor.py  formatters.py  loader.py  models.py  propagation.py  protocols.py  queries.py  results.py  stubs.py  timing.py
flow/integrations/: README.md  __init__.py  base.py  formatters.py  models.py  queries.py
flow/integrations/cli_scripts/: __init__.py  cli.py  detector.py
flow/integrations/django/: __init__.py  cli.py  detector.py
flow/integrations/fastapi/: __init__.py  cli.py  detector.py
flow/integrations/flask/: __init__.py  cli.py  detector.py  semantics.py
flow/stubs/: redis.yaml
scripts/: bench_propagation.py  diagnose_lsp_key.py  release.sh  test_lsp.py  test_scope.py
tests/: conftest.py  test_callers.py  test_catches.py  test_cli_smoke.py  test_drf_dispatch.py  test_entrypoints.py  test_escapes.py  test_exceptions.py  test_factory_raise.py  test_flask_appbuilder.py  test_flask_restful.py  test_generic_detector.py  test_generic_handler.py  test_hierarchy.py  test_init.py  test_lsp.py  test_propagation.py  test_raises.py  test_remote_handler.py  test_resolution.py  test_routes_to.py  test_stats.py  test_trust_features.py
tests/fixtures/catches_flow_test/: app.py
tests/fixtures/cli_scripts/: process.py
tests/fixtures/drf_app/: views.py
tests/fixtures/exception_hierarchy/: errors.py
tests/fixtures/factory_raise/: errors.py  main.py  self_factory.py
tests/fixtures/fastapi_app/: auth.py  main.py
tests/fixtures/flask_app/: app.py  errors.py
tests/fixtures/flask_appbuilder_app/: errors.py  views.py
tests/fixtures/flask_restful_app/: app.py  extended.py
tests/fixtures/flask_restful_crossfile/: api.py  resources.py
tests/fixtures/generic_handler_app/: app.py  errors.py
tests/fixtures/global_handler_app/: app.py
tests/fixtures/mixed_app/: api.py  cli.py  errors.py
tests/fixtures/remote_handler_app/: handlers.py  routes.py
tests/fixtures/resolution_test/: main.py  other.py  services.py  utils.py
